# llm-finetune

./: .gitignore  README.md  requirements.txt
chatbot/: Dockerfile  app.py  data.py  docker-compose.yml  entrypoint.sh  model.py
evaluation/: Dockerfile  common.py  dialogue_eval.py  entrypoint.sh  intent_eval.py  summary_eval.py
finetune/: dataset.py  model.py  pyproject.toml
